	PR c++/78337 - ICE on invalid with generic lambda

* semantics.c (process_outer_var_ref): Check if containing_function
	is null.  Move inform call under complain test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244340 138bc75d-0d04-0410-961f-82ee72b054a4